fix: Topleft whitespace in Calendar during production

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -771,11 +771,12 @@ h5 {
 td div p{
   color: #66e900 !important;
 }
-div div div div div div {
-  background-color: black;
-}
+
 td div div{
   color: #66e900 !important;
+}
+.jss33
+{  background-color: black !important;
 }
 
 td div span{
